<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">晒生活</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_consume">ConsumeActivity</string>
    <string name="title_activity_income">IncomeActivity</string>
    <string name="title_activity_upload_own">UploadOwnActivity</string>
    <string name="title_activity_embarrass_list">EmbarrassListActivity</string>
    <string name="title_activity_consume_detail">ConsumeDetailActivity</string>
    <string name="title_activity_income_detail">IncomeDetailActivity</string>
    <string name="title_activity_embarrass_detail">EmbarrassDetailActivity</string>
    <string name="title">标题:</string>
    <string name="title_hint">有趣的标题</string>
    <string name="describe">描述:</string>
    <string name="describe_hint">简洁易懂的描述...</string>
    <string name="makesure">确定</string>
    <string name="upload_pic">上传图片</string>
    <string name="upload_pic_select_album">选择相册</string>
    <string name="upload_pic_take_photo">拍照上传</string>
    <string name="upload_pic_cancel">取消</string>

    <!-- 动态创建组件中 EditText的hint文字 -->
    <string name="consume_module_hint">请输入你消费的数字</string>
    <string name="income_module_hint">请输入你收入的数字</string>

    <!-- 上传自己的消费与收入的静态字段文字 -->
    <string name="upload_consume_income_unit_char">:  ￥</string>
    <string name="upload_consume_income_unit">元</string>
    <string name="upload_consume_income_unit_delete">删除</string>

    <!-- 糗事儿界面的字段 -->
    <string name="embarrass_title">晒自己的糗事儿</string>
    <string name="embarrass_detail">糗事儿详细</string>
    <string name="embarrass_detail_pic">图片</string>
    <!-- 消费界面的字段 -->
    <string name="consume_title">晒自己的消费</string>
    <string name="consume_detail">消费详细</string>
    <string name="consume_detail_leave_a_note_button">我来说一句</string>
    <string name="consume_detail_leave_a_note_button_button">我       说</string>
    <string name="consume_detail_unit_char">￥</string>
    <string name="consume_detail_unit">元</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="menu_item_clear_memory_cache">清除内存缓存</string>
    <string name="menu_item_clear_disc_cache">清除硬盘缓存</string>
    <string name="menu_item_pause_on_scroll">Pause on scroll</string>
    <string name="menu_item_pause_on_fling">Pause on fling</string>
    <!-- Content descriptions -->
    <string name="descr_image">Image</string>
    <string name="title_activity_plain_look">PlainLookActivity</string>
    <string name="menu_settings">Settings</string>
    <string name="plain_look_title">晒自己照片</string>
    <string name="plain_look_view_pager_title">查看照片</string>
    <string name="good">顶一个</string>
    <string name="bad">踩一脚</string>
    <string name="title_activity_get_user_info">GetUserInfoActivity</string>

</resources>