<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:background="@drawable/popup_window"
    android:gravity="top|center"
    android:orientation="vertical"
    android:padding="20dp" >

    <Button
        android:id="@+id/selectAlbumButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_pic_select_album" />

    <Button
        android:id="@+id/takePhotoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_pic_take_photo" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_pic_cancel" />

</LinearLayout>